--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "preact-render-to-string": "^6.5.7",
     "pretty-bytes": "^6.1.1",
     "pretty-time": "^1.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-citation": "^2.0.0",
